@@ -234,6 +234,15 @@ From anywhere on the map, the player with this skill can render the target mob/p
 unable to move.  Use this skill again on the same player to release them.  Magic won't \
 help the player, though the TRANSFER Archon command will still work.
 
+ARCHON_MARKOOC=MARKOOC
+MARK_OOC=MARKOOC
+MARKOOC=<ABILITY>\
+Usage    : MARKOOC [PLAYER NAME]\n\r\
+Example  : MARKOOC gunther\n\r\
+From anywhere on the map, the player with this skill can render the target mob/player \
+unable to receive any further RolePlay experience.  Use this skill again \
+on the same player to release them.
+
 ARCHON_RECORD=RECORD
 RECORD=<ABILITY>\
 Usage    : RECORD [PLAYER NAME]\n\r\
